Satellite plot updates. Optiosn for marker size, scale mapped.

--- a/Python_notebooks/CMEMS_KML_File_Creation.ipynb
+++ b/Python_notebooks/CMEMS_KML_File_Creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['CMEMS_cmems_mod_glo_bgc-car_anfc_0.25deg_P1D-m_April-May2024.nc', 'CMEMS_cmems_obs-oc_atl_bgc-optics_nrt_l3-multi-1km_P1D_April-May2024.nc', 'CMEMS_cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D_April-May2024.nc', 'CMEMS_cmems_obs-sl_eur_phy-ssh_nrt_allsat-l4-duacs-0.125deg_P1D_April-May2024.nc']\n",
+      "['CMEMS_cmems_mod_glo_bgc-car_anfc_0.25deg_P1D-m_April-May2024.nc', 'CMEMS_cmems_obs-oc_atl_bgc-optics_nrt_l3-multi-1km_P1D_April-May2024.nc', 'CMEMS_cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D_April-May2024.nc', 'CMEMS_cmems_obs-sl_eur_phy-ssh_nrt_allsat-l4-duacs-0.125deg_P1D_April-May2024.nc', 'CMEMS_cmems_obs_mob_glo_phy-cur_nrt_0.25deg_P1D-m_April-May2024.nc']\n",
       "CMEMS_cmems_mod_glo_bgc-car_anfc_0.25deg_P1D-m_April-May2024.nc\n",
       "['dissic', 'ph', 'talk']\n",
       "CMEMS_cmems_obs-oc_atl_bgc-optics_nrt_l3-multi-1km_P1D_April-May2024.nc\n",
@@ -105,7 +105,9 @@
       "CMEMS_cmems_obs-oc_atl_bgc-plankton_nrt_l3-multi-1km_P1D_April-May2024.nc\n",
       "['CHL', 'CHL_uncertainty', 'DIATO', 'DIATO_uncertainty', 'DINO', 'DINO_uncertainty', 'GREEN', 'GREEN_uncertainty', 'HAPTO', 'HAPTO_uncertainty', 'MICRO', 'MICRO_uncertainty', 'NANO', 'NANO_uncertainty', 'PICO', 'PICO_uncertainty', 'PROCHLO', 'PROCHLO_uncertainty', 'PROKAR', 'PROKAR_uncertainty', 'flags']\n",
       "CMEMS_cmems_obs-sl_eur_phy-ssh_nrt_allsat-l4-duacs-0.125deg_P1D_April-May2024.nc\n",
-      "['adt', 'err_sla', 'err_ugosa', 'err_vgosa', 'flag_ice', 'sla', 'ugos', 'ugosa', 'vgos', 'vgosa']\n"
+      "['adt', 'err_sla', 'err_ugosa', 'err_vgosa', 'flag_ice', 'sla', 'ugos', 'ugosa', 'vgos', 'vgosa']\n",
+      "CMEMS_cmems_obs_mob_glo_phy-cur_nrt_0.25deg_P1D-m_April-May2024.nc\n",
+      "['err_ue', 'err_ugos', 'err_uo', 'err_ve', 'err_vgos', 'err_vo', 'ue', 'ugos', 'uo', 've', 'vgos', 'vo']\n"
      ]
     }
    ],
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +187,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 43\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcolor_to_kml_format\u001b[39m(color):\n\u001b[0;32m     36\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m simplekml\u001b[38;5;241m.\u001b[39mColor\u001b[38;5;241m.\u001b[39mrgb(\n\u001b[0;32m     37\u001b[0m         \u001b[38;5;28mint\u001b[39m(color[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m255\u001b[39m),\n\u001b[0;32m     38\u001b[0m         \u001b[38;5;28mint\u001b[39m(color[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m255\u001b[39m),\n\u001b[0;32m     39\u001b[0m         \u001b[38;5;28mint\u001b[39m(color[\u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m255\u001b[39m),\n\u001b[0;32m     40\u001b[0m         \u001b[38;5;28mint\u001b[39m(color[\u001b[38;5;241m3\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m255\u001b[39m)\n\u001b[0;32m     41\u001b[0m     )\n\u001b[1;32m---> 43\u001b[0m kml_colors \u001b[38;5;241m=\u001b[39m [color_to_kml_format(color) \u001b[38;5;28;01mfor\u001b[39;00m color \u001b[38;5;129;01min\u001b[39;00m \u001b[43mcolors_im\u001b[49m]\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcreate_kml_polygon\u001b[39m(path, kml_color, date_of_plot_filter):\n\u001b[0;32m     46\u001b[0m     coords \u001b[38;5;241m=\u001b[39m path\u001b[38;5;241m.\u001b[39mvertices\n",
+      "Cell \u001b[1;32mIn[6], line 43\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcolor_to_kml_format\u001b[39m(color):\n\u001b[0;32m     36\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m simplekml\u001b[38;5;241m.\u001b[39mColor\u001b[38;5;241m.\u001b[39mrgb(\n\u001b[0;32m     37\u001b[0m         \u001b[38;5;28mint\u001b[39m(color[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m255\u001b[39m),\n\u001b[0;32m     38\u001b[0m         \u001b[38;5;28mint\u001b[39m(color[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m255\u001b[39m),\n\u001b[0;32m     39\u001b[0m         \u001b[38;5;28mint\u001b[39m(color[\u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m255\u001b[39m),\n\u001b[0;32m     40\u001b[0m         \u001b[38;5;28mint\u001b[39m(color[\u001b[38;5;241m3\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m255\u001b[39m)\n\u001b[0;32m     41\u001b[0m     )\n\u001b[1;32m---> 43\u001b[0m kml_colors \u001b[38;5;241m=\u001b[39m [color_to_kml_format(color) \u001b[38;5;28;01mfor\u001b[39;00m color \u001b[38;5;129;01min\u001b[39;00m \u001b[43mcolors_im\u001b[49m]\n\u001b[0;32m     45\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcreate_kml_polygon\u001b[39m(path, kml_color, date_of_plot_filter):\n\u001b[0;32m     46\u001b[0m     coords \u001b[38;5;241m=\u001b[39m path\u001b[38;5;241m.\u001b[39mvertices\n",
       "\u001b[1;31mNameError\u001b[0m: name 'colors_im' is not defined"
      ]
     }
@@ -234,7 +236,7 @@
     "        int(color[3] * 255)\n",
     "    )\n",
     "\n",
-    "kml_colors = [color_to_kml_format(color) for color in colors_im]\n",
+    "#kml_colors = [color_to_kml_format(color) for color in colors_im]\n",
     "\n",
     "def create_kml_polygon(path, kml_color, date_of_plot_filter):\n",
     "    coords = path.vertices\n",
@@ -402,67 +404,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to create KML arrow with arrowhead\n",
-    "def create_kml_arrow(x, y, u, v, kml, scale_factor, date_of_plot_filter):\n",
-    "    start = (x, y)\n",
-    "    end = (x + u * scale_factor, y + v * scale_factor)\n",
-    "    \n",
-    "    line = kml.newlinestring(name=\"Quiver Arrow\", coords=[start, end])\n",
-    "    # Set line style\n",
-    "    line.style.linestyle.width = 2\n",
-    "    line.style.linestyle.color = simplekml.Color.red\n",
-    "    # Add timestamp to the feature\n",
-    "    line.timestamp.when = date_of_plot_filter.isoformat()\n",
-    "    \n",
-    "    # Calculate the arrowhead\n",
-    "    arrow_length = 0.1 * scale_factor  # Length of the arrowhead\n",
-    "    angle = np.arctan2(v, u)\n",
-    "    arrow_angle = np.pi / 6  # Angle of the arrowhead\n",
-    "    \n",
-    "    # First point of arrowhead\n",
-    "    arrow_x1 = end[0] - arrow_length * np.cos(angle + arrow_angle)\n",
-    "    arrow_y1 = end[1] - arrow_length * np.sin(angle + arrow_angle)\n",
-    "    # Second point of arrowhead\n",
-    "    arrow_x2 = end[0] - arrow_length * np.cos(angle - arrow_angle)\n",
-    "    arrow_y2 = end[1] - arrow_length * np.sin(angle - arrow_angle)\n",
-    "    \n",
-    "    # Create KML points for arrowhead\n",
-    "    kml.newlinestring(name=\"Arrowhead\", coords=[(arrow_x1, arrow_y1), end, (arrow_x2, arrow_y2)]).style.linestyle.color = simplekml.Color.red\n",
-    "\n",
-    "# Function to create KML arrow with arrowhead\n",
-    "def create_kml_arrow(x, y, u, v, kml, scale_factor, date_of_plot_filter):\n",
-    "    start = (x, y)\n",
-    "    end = (x + u * scale_factor, y + v * scale_factor)\n",
-    "    \n",
-    "    line = kml.newlinestring(name=\"Quiver Arrow\", coords=[start, end])\n",
-    "    # Set line style\n",
-    "    line.style.linestyle.width = 2\n",
-    "    line.style.linestyle.color = simplekml.Color.red\n",
-    "    # Add timestamp to the feature\n",
-    "    line.timestamp.when = date_of_plot_filter.isoformat()\n",
-    "    \n",
-    "    # Calculate the arrowhead\n",
-    "    arrow_length = 0.1 * scale_factor  # Length of the arrowhead\n",
-    "    angle = np.arctan2(v, u)\n",
-    "    arrow_angle = np.pi / 6  # Angle of the arrowhead\n",
-    "    \n",
-    "    # First point of arrowhead\n",
-    "    arrow_x1 = end[0] - arrow_length * np.cos(angle + arrow_angle)\n",
-    "    arrow_y1 = end[1] - arrow_length * np.sin(angle + arrow_angle)\n",
-    "    # Second point of arrowhead\n",
-    "    arrow_x2 = end[0] - arrow_length * np.cos(angle - arrow_angle)\n",
-    "    arrow_y2 = end[1] - arrow_length * np.sin(angle - arrow_angle)\n",
-    "    \n",
-    "    # Create KML points for arrowhead\n",
-    "    kml.newlinestring(name=\"Arrowhead\", coords=[(arrow_x1, arrow_y1), end, (arrow_x2, arrow_y2)]).style.linestyle.color = simplekml.Color.red\n",
     "\n",
     "for var_category, files in var_dict.items():\n",
     "    if var_category == 'adt':\n",
-    "        for day_offset in [-1]:  # Plot the last two days\n",
+    "        for day_offset in [-1]:  # Plot the last day\n",
     "            if len(files) > 1:\n",
     "                data_vars = []\n",
     "                for file, data_var in files.items():\n",
@@ -548,33 +497,32 @@
     "\n",
     "            # Plot the current vectors field and the coastline\n",
     "            im = ax.quiver(x, y, U_km_per_6hr, V_km_per_6hr, speed, angles='xy', scale_units='xy', cmap='viridis', transform=ccrs.PlateCarree(), width=0.002)\n",
+    "            png_filename = 'quiver_plot.png'\n",
+    "            plt.savefig(png_filename, bbox_inches='tight', pad_inches=0)\n",
+    "            plt.close()\n",
     "\n",
-    "            cbar = plt.colorbar(im, ax=ax, label=xx_plot_cbar_label)\n",
+    "            # Define the bounding box for the overlay (corresponding to the plot extent)\n",
+    "            north = lat_max\n",
+    "            south = lat_min\n",
+    "            east  = lon_max\n",
+    "            west  = lon_min\n",
     "            \n",
-    "            # Add lon/lat grid and adjust labels\n",
-    "            gl = ax.gridlines(draw_labels=True, x_inline=False, y_inline=False, crs=ccrs.PlateCarree())\n",
-    "            gl.top_labels = False\n",
-    "            gl.right_labels = False\n",
-    "\n",
     "            # Create a KML object\n",
     "            kml = simplekml.Kml()\n",
-    "\n",
-    "            scale_factor = 1\n",
-    "\n",
-    "            # Extract data directly from quiver plot\n",
-    "\n",
-    "            # Use ThreadPoolExecutor for parallel processing with tqdm progress bar\n",
-    "            with ThreadPoolExecutor() as executor:\n",
-    "                futures = [\n",
-    "                    executor.submit(create_kml_arrow, X, Y, U, V, kml, scale_factor, date_of_plot_filter)\n",
-    "                    for X, Y, U, V in zip(Q.X.flatten(), Q.Y.flatten(), Q.U.flatten(), Q.V.flatten())\n",
-    "                ]\n",
-    "                \n",
-    "                for _ in tqdm(as_completed(futures), total=len(futures)):\n",
-    "                    pass\n",
-    "\n",
+    "            \n",
+    "            # Add the image overlay\n",
+    "            ground = kml.newgroundoverlay(name='Quiver Plot')\n",
+    "            ground.icon.href = png_filename\n",
+    "            ground.latlonbox.north = north\n",
+    "            ground.latlonbox.south = south\n",
+    "            ground.latlonbox.east = east\n",
+    "            ground.latlonbox.west = west\n",
+    "            \n",
     "            # Save the KML file\n",
-    "            kml.save(f\"{output_dir}_SSC_{date_of_plot}.kml\")"
+    "            kml_filename = 'quiver_plot.kml'\n",
+    "            kml.save(kml_filename)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
