--- a/Python_notebooks/NEODASS_satellite_visualisation_with_autonomy.ipynb
+++ b/Python_notebooks/NEODASS_satellite_visualisation_with_autonomy.ipynb
@@ -192,6 +192,7 @@
       "['sla']\n",
       "['sla']\n",
       "['sla']\n",
+      "['sla']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
@@ -238,6 +239,10 @@
       "['latitude_longitude', 'CHL_OC4ME']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
       "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'CHL_OC4ME']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
+      "['latitude_longitude', 'sea_surface_temperature']\n",
       "['latitude_longitude', 'sea_surface_temperature']\n",
       "['latitude_longitude', 'sea_surface_temperature']\n",
       "['latitude_longitude', 'sea_surface_temperature']\n",
@@ -306,6 +311,8 @@
       "['latitude_longitude', 'chl_oc5ci']\n",
       "['latitude_longitude', 'chl_oc5ci']\n",
       "['latitude_longitude', 'chl_oc5ci']\n",
+      "['latitude_longitude', 'chl_oc5ci']\n",
+      "['latitude_longitude', 'chl_oc5', 'pic']\n",
       "['latitude_longitude', 'chl_oc5', 'pic']\n",
       "['latitude_longitude', 'chl_oc5', 'pic']\n",
       "['latitude_longitude', 'chl_oc5', 'pic']\n",
@@ -434,6 +441,11 @@
       "    File: olci_b_1km-CHL_OC4ME-1d-20240611_20240611-nrt.nc, Variable: CHL_OC4ME\n",
       "    File: viirs_noaa20-chl_oc5ci-1d-20240611_20240611-nrt.nc, Variable: chl_oc5ci\n",
       "    File: viirs_suomi-chl_oc5_pic-1d-20240611_20240611-nrt.nc, Variable: chl_oc5\n",
+      "  Date: 2024-06-12 00:00:00\n",
+      "    File: olci_a_1km-CHL_OC4ME-1d-20240612_20240612-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: olci_b_1km-CHL_OC4ME-1d-20240612_20240612-nrt.nc, Variable: CHL_OC4ME\n",
+      "    File: viirs_noaa20-chl_oc5ci-1d-20240612_20240612-nrt.nc, Variable: chl_oc5ci\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240612_20240612-nrt.nc, Variable: chl_oc5\n",
       "Temp files:\n",
       "  Date: 2024-05-20 00:00:00\n",
       "    File: slstr_a-sea_surface_temperature-1d-20240520_20240520-nrt.nc, Variable: sea_surface_temperature\n",
@@ -504,6 +516,9 @@
       "  Date: 2024-06-11 00:00:00\n",
       "    File: slstr_a-sea_surface_temperature-1d-20240611_20240611-nrt.nc, Variable: sea_surface_temperature\n",
       "    File: slstr_b-sea_surface_temperature-1d-20240611_20240611-nrt.nc, Variable: sea_surface_temperature\n",
+      "  Date: 2024-06-12 00:00:00\n",
+      "    File: slstr_a-sea_surface_temperature-1d-20240612_20240612-nrt.nc, Variable: sea_surface_temperature\n",
+      "    File: slstr_b-sea_surface_temperature-1d-20240612_20240612-nrt.nc, Variable: sea_surface_temperature\n",
       "Sla files:\n",
       "  Date: 2024-05-20 00:00:00\n",
       "    File: cmems_sea_level-sla-1d-20240520_20240520-nrt.nc, Variable: sla\n",
@@ -551,6 +566,8 @@
       "    File: cmems_sea_level-sla-1d-20240610_20240610-nrt.nc, Variable: sla\n",
       "  Date: 2024-06-11 00:00:00\n",
       "    File: cmems_sea_level-sla-1d-20240611_20240611-nrt.nc, Variable: sla\n",
+      "  Date: 2024-06-12 00:00:00\n",
+      "    File: cmems_sea_level-sla-1d-20240612_20240612-nrt.nc, Variable: sla\n",
       "Adt files:\n",
       "Bbp files:\n",
       "Pic files:\n",
@@ -589,7 +606,9 @@
       "  Date: 2024-06-10 00:00:00\n",
       "    File: viirs_suomi-chl_oc5_pic-1d-20240610_20240610-nrt.nc, Variable: pic\n",
       "  Date: 2024-06-11 00:00:00\n",
-      "    File: viirs_suomi-chl_oc5_pic-1d-20240611_20240611-nrt.nc, Variable: pic\n"
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240611_20240611-nrt.nc, Variable: pic\n",
+      "  Date: 2024-06-12 00:00:00\n",
+      "    File: viirs_suomi-chl_oc5_pic-1d-20240612_20240612-nrt.nc, Variable: pic\n"
      ]
     }
    ],
@@ -697,7 +716,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Date progress...:   0%|          | 0/23 [00:00<?, ?it/s]"
+      "Date progress...:   0%|          | 0/24 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -719,8 +738,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Date progress...: 100%|██████████| 23/23 [00:44<00:00,  1.93s/it]\n",
-      "Date progress...:   0%|          | 0/23 [00:00<?, ?it/s]"
+      "Date progress...:  96%|█████████▌| 23/24 [00:38<00:01,  1.70s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening file: olci_a_1km-CHL_OC4ME-1d-20240612_20240612-nrt.nc for variable: CHL_OC4ME\n",
+      "Appended data for CHL_OC4ME from file: olci_a_1km-CHL_OC4ME-1d-20240612_20240612-nrt.nc\n",
+      "Opening file: olci_b_1km-CHL_OC4ME-1d-20240612_20240612-nrt.nc for variable: CHL_OC4ME\n",
+      "Appended data for CHL_OC4ME from file: olci_b_1km-CHL_OC4ME-1d-20240612_20240612-nrt.nc\n",
+      "Opening file: viirs_noaa20-chl_oc5ci-1d-20240612_20240612-nrt.nc for variable: chl_oc5ci\n",
+      "Appended data for chl_oc5ci from file: viirs_noaa20-chl_oc5ci-1d-20240612_20240612-nrt.nc\n",
+      "Opening file: viirs_suomi-chl_oc5_pic-1d-20240612_20240612-nrt.nc for variable: chl_oc5\n",
+      "Appended data for chl_oc5 from file: viirs_suomi-chl_oc5_pic-1d-20240612_20240612-nrt.nc\n",
+      "Averaged data for chl on 2024-06-12 00:00:00:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Date progress...: 100%|██████████| 24/24 [01:15<00:00,  3.17s/it]\n",
+      "Date progress...:   0%|          | 0/24 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -738,8 +779,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Date progress...: 100%|██████████| 23/23 [00:40<00:00,  1.77s/it]\n",
-      "Date progress...:   0%|          | 0/23 [00:00<?, ?it/s]"
+      "Date progress...:  96%|█████████▌| 23/24 [00:36<00:01,  1.57s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening file: slstr_a-sea_surface_temperature-1d-20240612_20240612-nrt.nc for variable: sea_surface_temperature\n",
+      "Appended data for sea_surface_temperature from file: slstr_a-sea_surface_temperature-1d-20240612_20240612-nrt.nc\n",
+      "Opening file: slstr_b-sea_surface_temperature-1d-20240612_20240612-nrt.nc for variable: sea_surface_temperature\n",
+      "Appended data for sea_surface_temperature from file: slstr_b-sea_surface_temperature-1d-20240612_20240612-nrt.nc\n",
+      "Averaged data for temp on 2024-06-12 00:00:00:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Date progress...: 100%|██████████| 24/24 [01:11<00:00,  2.99s/it]\n",
+      "Date progress...:   0%|          | 0/24 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -755,10 +814,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Date progress...: 100%|██████████| 23/23 [00:26<00:00,  1.14s/it]\n",
+      "Date progress...:  96%|█████████▌| 23/24 [00:25<00:01,  1.10s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening file: cmems_sea_level-sla-1d-20240612_20240612-nrt.nc for variable: sla\n",
+      "Appended data for sla from file: cmems_sea_level-sla-1d-20240612_20240612-nrt.nc\n",
+      "Averaged data for sla on 2024-06-12 00:00:00:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Date progress...: 100%|██████████| 24/24 [00:49<00:00,  2.07s/it]\n",
       "Date progress...: 0it [00:00, ?it/s]\n",
       "Date progress...: 0it [00:00, ?it/s]\n",
-      "Date progress...:   0%|          | 0/18 [00:00<?, ?it/s]"
+      "Date progress...:   0%|          | 0/19 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -774,13 +849,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Date progress...: 100%|██████████| 18/18 [00:41<00:00,  2.33s/it]\n"
+      "Date progress...:  95%|█████████▍| 18/19 [00:39<00:02,  2.19s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening file: viirs_suomi-chl_oc5_pic-1d-20240612_20240612-nrt.nc for variable: pic\n",
+      "Appended data for pic from file: viirs_suomi-chl_oc5_pic-1d-20240612_20240612-nrt.nc\n",
+      "Averaged data for pic on 2024-06-12 00:00:00:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Date progress...: 100%|██████████| 19/19 [01:19<00:00,  4.19s/it]\n"
      ]
     }
    ],
    "source": [
     "\n",
     "##### Plotting loop #####\n",
+    "\n",
+    "skip_ship   = False\n",
+    "skip_glider = False\n",
     "\n",
     "# Load in autonomy positions\n",
     "csv_file = 'C:\\\\Users\\\\hanshil\\\\Documents\\\\GitHub\\\\biocarbon_nrt_data_viz\\\\Plotting_tools\\\\shared_data\\\\rt_positions.csv'  # Update this path\n",
@@ -931,9 +1025,9 @@
     "\n",
     "        for obj_type, symbol in object_symbols.items():\n",
     "\n",
-    "            if obj_type == 'ship':\n",
+    "            if obj_type == 'ship' and skip_ship:\n",
     "                continue\n",
-    "            if obj_type == 'glider':\n",
+    "            if obj_type == 'glider' and skip_glider:\n",
     "                continue\n",
     "\n",
     "            # Filter data for the current object type\n",
