Download script for optical data now downloads to correct directory and unzips in location. Adjustments to visualisation.

--- a/Python_notebooks/OLCI_RGB.ipynb
+++ b/Python_notebooks/OLCI_RGB.ipynb
@@ -2,49 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import eumdac\n",
     "import datetime\n",
     "import shutil\n",
-    "from tqdm import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This token 'b8facbfb-d9a7-33aa-9dbc-aa8089eac1db' expires 2024-06-17 09:50:47.173916\n"
-     ]
-    }
-   ],
-   "source": [
-    "consumer_key = '9dcHtMpRngCEnHBtZX4iOZL7s5Qa'\n",
-    "consumer_secret = 'FfJCsfRfPPOThUvOYfBEFkPzxCwa'\n",
-    "credentials = (consumer_key, consumer_secret)\n",
-    "token = eumdac.AccessToken(credentials)\n",
-    "print(f\"This token '{token}' expires {token.expiration}\")"
+    "from tqdm import tqdm\n",
+    "import os\n",
+    "import zipfile"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Establish directory locations\n",
+    "parent_dir    = os.path.abspath(os.path.join(os.getcwd(), os.pardir))\n",
+    "data_dir      = os.path.join(parent_dir, 'data')\n",
+    "satellite_dir = os.path.join(data_dir, 'satellite')\n",
+    "output_dir    = os.path.join(parent_dir, 'Output/sat_plot')\n",
+    "NEODASS_dir   = os.path.join(satellite_dir, 'NEODASS')\n",
+    "floats_dir    = os.path.join(parent_dir, 'Data/Floats')\n",
+    "sentinel_dir  = os.path.join(satellite_dir, 'SENTINEL')\n",
+    "sen3_dirs     = [os.path.join(sentinel_dir, d) for d in os.listdir(sentinel_dir) if '.SEN3' in d]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "This token '722a85dc-1bca-3cfa-b42c-1cd89b8e2479' expires 2024-06-17 15:49:28.150777\n",
       "EO:EUM:DAT:MSG:CLM-IODC\n",
       "EO:EUM:DAT:0394\n",
       "EO:EUM:DAT:0412\n",
+      "EO:EUM:DAT:0237\n",
+      "EO:EUM:DAT:0241\n",
       "EO:EUM:DAT:0857\n",
       "EO:EUM:DAT:0862\n",
       "EO:EUM:DAT:0882\n",
@@ -65,6 +66,7 @@
       "EO:EUM:DAT:0239\n",
       "EO:EUM:DAT:0301\n",
       "EO:EUM:DAT:0617\n",
+      "EO:EUM:DAT:0880\n",
       "EO:EUM:DAT:0856\n",
       "EO:EUM:DAT:METOP:ASCSZO1B\n",
       "EO:EUM:DAT:METOP:GOMEL1\n",
@@ -72,9 +74,25 @@
       "EO:EUM:DAT:0851\n",
       "EO:EUM:DAT:0835\n",
       "EO:EUM:DAT:0833\n",
-      "EO:EUM:DAT:0880\n",
-      "EO:EUM:DAT:0237\n",
-      "EO:EUM:DAT:0241\n",
+      "EO:EUM:DAT:0858\n",
+      "EO:EUM:DAT:0859\n",
+      "EO:EUM:DAT:0839\n",
+      "EO:EUM:DAT:0841\n",
+      "EO:EUM:DAT:0834\n",
+      "EO:EUM:DAT:0142\n",
+      "EO:EUM:DAT:0238\n",
+      "EO:EUM:DAT:0374\n",
+      "EO:EUM:DAT:0601\n",
+      "EO:EUM:DAT:0556\n",
+      "EO:EUM:DAT:0557\n",
+      "EO:EUM:DAT:0576\n",
+      "EO:EUM:DAT:0579\n",
+      "EO:EUM:DAT:0581\n",
+      "EO:EUM:DAT:0583\n",
+      "EO:EUM:DAT:0300\n",
+      "EO:EUM:DAT:0407\n",
+      "EO:EUM:DAT:0411\n",
+      "EO:EUM:DAT:0417\n",
       "EO:EUM:DAT:0274\n",
       "EO:EUM:DAT:0082\n",
       "EO:EUM:DAT:0584\n",
@@ -90,51 +108,25 @@
       "EO:EUM:DAT:METOP:OSI-150-B\n",
       "EO:EUM:DAT:MSG:RSS-CLM\n",
       "EO:EUM:DAT:0615\n",
-      "EO:EUM:DAT:0858\n",
-      "EO:EUM:DAT:0859\n",
-      "EO:EUM:DAT:0839\n",
-      "EO:EUM:DAT:0841\n",
-      "EO:EUM:DAT:0834\n",
       "EO:EUM:CM:METOP:ASCSZOR02\n",
       "EO:EUM:CM:METOP:ASCSZRR02\n",
       "EO:EUM:DAT:0088\n",
       "EO:EUM:DAT:0143\n",
-      "EO:EUM:DAT:0142\n",
-      "EO:EUM:DAT:0238\n",
-      "EO:EUM:DAT:0374\n",
-      "EO:EUM:DAT:0601\n",
-      "EO:EUM:DAT:0837\n",
-      "EO:EUM:DAT:0838\n",
-      "EO:EUM:DAT:0840\n",
-      "EO:EUM:DAT:0758\n",
-      "EO:EUM:DAT:0556\n",
-      "EO:EUM:DAT:0557\n",
-      "EO:EUM:DAT:0576\n",
-      "EO:EUM:DAT:0579\n",
-      "EO:EUM:DAT:0581\n",
-      "EO:EUM:DAT:0583\n",
-      "EO:EUM:DAT:0585\n",
-      "EO:EUM:DAT:0300\n",
-      "EO:EUM:DAT:0407\n",
-      "EO:EUM:DAT:0411\n",
-      "EO:EUM:DAT:0417\n",
+      "EO:EUM:DAT:0881\n",
       "EO:EUM:DAT:0853\n",
       "EO:EUM:DAT:0854\n",
       "EO:EUM:DAT:METOP:IASIL1C-ALL\n",
       "EO:EUM:DAT:METOP:IASSND02\n",
-      "EO:EUM:DAT:0881\n",
+      "EO:EUM:DAT:0837\n",
+      "EO:EUM:DAT:0838\n",
+      "EO:EUM:DAT:0840\n",
+      "EO:EUM:DAT:0585\n",
+      "EO:EUM:DAT:0758\n",
       "EO:EUM:DAT:0080\n",
       "EO:EUM:DAT:0240\n",
-      "EO:EUM:DAT:0414\n",
-      "EO:EUM:DAT:0577\n",
-      "EO:EUM:DAT:0578\n",
-      "EO:EUM:DAT:0582\n",
-      "EO:EUM:DAT:0586\n",
-      "EO:EUM:DAT:0533\n",
-      "EO:EUM:DAT:MSG:HRSEVIRI-IODC\n",
       "EO:EUM:DAT:MSG:HRSEVIRI\n",
       "EO:EUM:DAT:METOP:MHSL1\n",
-      "EO:EUM:DAT:0645\n",
+      "EO:EUM:DAT:MSG:HRSEVIRI-IODC\n",
       "EO:EUM:DAT:0850\n",
       "EO:EUM:DAT:0852\n",
       "EO:EUM:DAT:0842\n",
@@ -143,175 +135,149 @@
       "EO:EUM:DAT:METOP:SOMO12\n",
       "EO:EUM:DAT:METOP:SOMO25\n",
       "EO:EUM:DAT:DMSP:OSI-401-B\n",
+      "EO:EUM:DAT:0414\n",
+      "EO:EUM:DAT:0577\n",
+      "EO:EUM:DAT:0578\n",
+      "EO:EUM:DAT:0582\n",
+      "EO:EUM:DAT:0586\n",
+      "EO:EUM:DAT:0533\n",
+      "EO:EUM:DAT:0645\n",
       "EO:EUM:DAT:METOP:AMSUL1\n",
       "EO:EUM:DAT:METOP:AVHRRL1\n"
      ]
     }
    ],
    "source": [
+    "consumer_key = '9dcHtMpRngCEnHBtZX4iOZL7s5Qa'\n",
+    "consumer_secret = 'FfJCsfRfPPOThUvOYfBEFkPzxCwa'\n",
+    "credentials = (consumer_key, consumer_secret)\n",
+    "token = eumdac.AccessToken(credentials)\n",
+    "print(f\"This token '{token}' expires {token.expiration}\")\n",
+    "\n",
     "datastore = eumdac.DataStore(token)\n",
     "for collection in datastore.collections:\n",
-    "    print(collection)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print(collection)\n",
     "selected_collection = datastore.get_collection('EO:EUM:DAT:0410')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found Datasets: 4 datasets for the given time range\n",
-      "S3A_OL_1_ERR____20240616T130743_20240616T135209_20240616T152804_2666_113_295______MAR_O_NR_002.SEN3\n",
-      "S3B_OL_1_ERR____20240616T122852_20240616T131318_20240616T144953_2666_094_152______MAR_O_NR_002.SEN3\n",
-      "S3A_OL_1_ERR____20240616T112644_20240616T121110_20240616T135146_2666_113_294______MAR_O_NR_002.SEN3\n",
-      "S3B_OL_1_ERR____20240616T104753_20240616T113219_20240616T131225_2666_094_151______MAR_O_NR_002.SEN3\n"
+      "Found Datasets: 1 datasets for the given time range\n",
+      "S3A_OL_1_ERR____20240617T110032_20240617T114457_20240617T132442_2665_113_308______MAR_O_NR_002.SEN3\n"
      ]
     }
    ],
    "source": [
     "# Add vertices for polygon, wrapping back to the start point.\n",
-    "\n",
     "min_lat = 55.5\n",
     "max_lat = 64.5\n",
     "min_lon = -30\n",
     "max_lon = -15\n",
+    "geometry = [[min_lon, min_lat],\n",
+    "            [min_lon, max_lat],\n",
+    "            [max_lon, max_lat],\n",
+    "            [max_lon, min_lat],\n",
+    "            [min_lon, min_lat]]\n",
     "\n",
-    "geometry = [[min_lon, min_lat],[min_lon, max_lat],[max_lon, max_lat],[max_lon, min_lat],[min_lon, min_lat]]\n",
     "# Set sensing start and end time\n",
-    "start = datetime.datetime(2024, 6, 16)\n",
-    "end = datetime.datetime(2024, 6, 17)\n",
+    "start = datetime.datetime(2024, 6, 17)\n",
+    "end = datetime.datetime(2024, 6, 18)\n",
+    "\n",
     "# Retrieve datasets that match our filter\n",
     "products = selected_collection.search(\n",
-    "    geo='POLYGON(({}))'.format(','.join([\"{} {}\".format(*coord) for coord in geometry])),\n",
-    "    dtstart=start, \n",
-    "    dtend=end)\n",
+    "           geo='POLYGON(({}))'.format(','.join([\"{} {}\".format(*coord) for coord in geometry])),\n",
+    "           dtstart=start, \n",
+    "           dtend=end)\n",
     "    \n",
     "print(f'Found Datasets: {products.total_results} datasets for the given time range')\n",
     "for product in products:\n",
-    "    print(str(product))\n"
+    "    print(str(product))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found Datasets: 4 datasets for the given time range\n",
-      "S3A_OL_1_ERR____20240616T130743_20240616T135209_20240616T152804_2666_113_295______MAR_O_NR_002.SEN3\n",
-      "S3B_OL_1_ERR____20240616T122852_20240616T131318_20240616T144953_2666_094_152______MAR_O_NR_002.SEN3\n",
-      "S3A_OL_1_ERR____20240616T112644_20240616T121110_20240616T135146_2666_113_294______MAR_O_NR_002.SEN3\n",
-      "S3B_OL_1_ERR____20240616T104753_20240616T113219_20240616T131225_2666_094_151______MAR_O_NR_002.SEN3\n"
+      "Found Datasets: 1 datasets for the given time range\n",
+      "S3A_OL_1_ERR____20240617T110032_20240617T114457_20240617T132442_2665_113_308______MAR_O_NR_002.SEN3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading S3A_OL_1_ERR____20240616T130743_20240616T135209_20240616T152804_2666_113_295______MAR_O_NR_002.SEN3: 100%|██████████| 740M/740M [02:11<00:00, 5.61MB/s] \n"
+      "Downloading S3A_OL_1_ERR____20240617T110032_20240617T114457_20240617T132442_2665_113_308______MAR_O_NR_002.SEN3: 100%|██████████| 729M/729M [01:39<00:00, 7.32MB/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Download of product S3A_OL_1_ERR____20240616T130743_20240616T135209_20240616T152804_2666_113_295______MAR_O_NR_002.SEN3 finished.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading S3B_OL_1_ERR____20240616T122852_20240616T131318_20240616T144953_2666_094_152______MAR_O_NR_002.SEN3: 100%|██████████| 724M/724M [04:44<00:00, 2.55MB/s] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Download of product S3B_OL_1_ERR____20240616T122852_20240616T131318_20240616T144953_2666_094_152______MAR_O_NR_002.SEN3 finished.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading S3A_OL_1_ERR____20240616T112644_20240616T121110_20240616T135146_2666_113_294______MAR_O_NR_002.SEN3: 100%|██████████| 732M/732M [02:11<00:00, 5.59MB/s] \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Download of product S3A_OL_1_ERR____20240616T112644_20240616T121110_20240616T135146_2666_113_294______MAR_O_NR_002.SEN3 finished.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading S3B_OL_1_ERR____20240616T104753_20240616T113219_20240616T131225_2666_094_151______MAR_O_NR_002.SEN3: 100%|██████████| 723M/723M [03:33<00:00, 3.38MB/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Download of product S3B_OL_1_ERR____20240616T104753_20240616T113219_20240616T131225_2666_094_151______MAR_O_NR_002.SEN3 finished.\n",
-      "All downloads are finished.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Download of product S3A_OL_1_ERR____20240617T110032_20240617T114457_20240617T132442_2665_113_308______MAR_O_NR_002.SEN3 finished.\n",
+      "All downloads are finished.\n",
+      "Unzipped S3A_OL_1_ERR____20240617T110032_20240617T114457_20240617T132442_2665_113_308______MAR_O_NR_002.SEN3.zip\n"
      ]
     }
    ],
    "source": [
-    "# Print the number of datasets found and their details\n",
-    "print(f'Found Datasets: {products.total_results} datasets for the given time range')\n",
-    "for product in products:\n",
-    "    print(str(product))\n",
+    "# Function to download files\n",
+    "def download_files(products, download_dir):\n",
+    "    print(f'Found Datasets: {products.total_results} datasets for the given time range')\n",
+    "    for product in products:\n",
+    "        print(str(product))\n",
     "\n",
-    "# Download the data with a progress bar\n",
-    "for product in products:\n",
-    "    with product.open() as fsrc:\n",
-    "        # Get the total length of the file from the response headers\n",
-    "        total_length = int(fsrc.info().get('Content-Length', 0))\n",
+    "    for product in products:\n",
+    "        with product.open() as fsrc:\n",
+    "            # Get the total length of the file from the response headers\n",
+    "            total_length = int(fsrc.info().get('Content-Length', 0))\n",
     "\n",
-    "        # Open the destination file\n",
-    "        with open(fsrc.name, mode='wb') as fdst, \\\n",
-    "             tqdm(total=total_length, unit='B', unit_scale=True, desc=f\"Downloading {product}\") as pbar:\n",
-    "            \n",
-    "            # Define a chunk size for reading the data\n",
-    "            chunk_size = 1024\n",
-    "            \n",
-    "            # Read the file in chunks and write to the destination file\n",
-    "            for chunk in iter(lambda: fsrc.read(chunk_size), b''):\n",
-    "                if chunk:  # filter out keep-alive new chunks\n",
-    "                    fdst.write(chunk)\n",
-    "                    pbar.update(len(chunk))\n",
-    "    \n",
-    "    print(f'Download of product {product} finished.')\n",
+    "            # Define the destination file path\n",
+    "            dest_path = os.path.join(download_dir, os.path.basename(fsrc.name))\n",
     "\n",
-    "print('All downloads are finished.')"
+    "            # Open the destination file\n",
+    "            with open(dest_path, mode='wb') as fdst, \\\n",
+    "                 tqdm(total=total_length, unit='B', unit_scale=True, desc=f\"Downloading {product}\") as pbar:\n",
+    "                \n",
+    "                # Define a chunk size for reading the data\n",
+    "                chunk_size = 1024\n",
+    "                \n",
+    "                # Read the file in chunks and write to the destination file\n",
+    "                for chunk in iter(lambda: fsrc.read(chunk_size), b''):\n",
+    "                    if chunk:  # filter out keep-alive new chunks\n",
+    "                        fdst.write(chunk)\n",
+    "                        pbar.update(len(chunk))\n",
+    "        \n",
+    "        print(f'Download of product {product} finished.')\n",
+    "\n",
+    "    print('All downloads are finished.')\n",
+    "\n",
+    "# Function to unzip files\n",
+    "def unzip_files(zip_dir):\n",
+    "    for item in os.listdir(zip_dir):\n",
+    "        if item.endswith('.zip'):\n",
+    "            zip_path = os.path.join(zip_dir, item)\n",
+    "            with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
+    "                zip_ref.extractall(zip_dir)\n",
+    "            os.remove(zip_path)  # Optionally remove the zip file after extraction\n",
+    "            print(f'Unzipped {item}')\n",
+    "\n",
+    "# Example usage\n",
+    "# Assuming `products` is already defined and contains the products to download7\n",
+    "\n",
+    "download_files(products, sentinel_dir)\n",
+    "unzip_files(sentinel_dir)"
    ]
   }
  ],
